--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@gsap/react": "^2.1.1",
     "framer-motion": "^11.3.30",
     "gsap": "^3.12.5",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-d3-tree": "^3.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1",
     "sass": "^1.77.8",
     "swiper": "^11.1.11"
